Fri Feb 13 14:19:14 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Use conn->cmd_ident for all silc_client_command_call()s.  Affected
	  file lib/silcclient/command.c

Fri Feb 13 13:53:45 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Convert all commands to UTF-8 before passing them to the
	  client library.  Still need to convert replies from UTF-8 to
	  the locale encoding.  Affected file 
	  irssi/src/silc/core/silc-cmdqueue.c
	  
Fri Feb 13 13:13:07 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* redirect all silc_client_command_calls through a queueing framework.
	  This fixes /CYCLE and the annoying "nick change after auto-joining
	  a channel".  Furthermore it defines one central point where
	  command parameters can be UTF-8-ified.  Affected files
	  irssi/src/silc/core/Makefile, client_ops.c, silc-channels.c,
	  silc-servers.[ch], silc-core.c, silc-cmdqueue.[ch], silc-lag.c

Fri Feb 13 12:04:41 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* use asynchronous connect() to establish router connections.
	  Fixes problem when the primary router goes down.  Affected files
	  silcd/server.c, silcd/server_backup.c

Thu Feb 12 20:09:59 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Added SILC_[32|64]_TO_PTR and SILC_PTR_TO_[32|64] macros.
	  Fixed various compilation warnings when type casting ints
	  to pointers or vice versa, of different size.  Updates around
	  the source free.

Tue Feb  3 23:25:17 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Surrogates not allowed in UTF-8 strings, updated decoder.
	  Affected file lib/silcutil/silcstrutil.c.  Added UTF-8
	  testers in lib/silcutil/tests/ directory.

Wed Jan 14 18:42:44 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Added SILC_CLIENT_CONN_ERROR_KE, ERROR_AUTH, ERROR_RESUME and
	  ERROR_TIMEOUT SilcClientConnectionStatus errors.  Affected
	  files are lib/silcclient/silcclient.h, client.c.
