@@ -1,3 +1,11 @@
+Tue Feb 17 19:34:30 EET 2004  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed silc_client_send_private_message to return TRUE correctly.
+	  Affected file lib/silcclient/client_prvmsg.c.
+
+	* Added topic to the SilcChannelEntry.  Affected files are
+	  lib/silcclient/silcclient.h, command_reply.c, client_notify.c.
+
 Fri Feb 13 14:19:14 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>
 
 	* Use conn->cmd_ident for all silc_client_command_call()s.  Affected
@@ -7,9 +15,9 @@ Fri Feb 13 13:53:45 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>
 
 	* Convert all commands to UTF-8 before passing them to the
 	  client library.  Still need to convert replies from UTF-8 to
-	  the locale encoding.  Affected file 
+	  the locale encoding.  Affected file
 	  irssi/src/silc/core/silc-cmdqueue.c
-	  
+
 Fri Feb 13 13:13:07 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>
 
 	* redirect all silc_client_command_calls through a queueing framework.
